Nether roof slowdown
Added tps counter and has logic to slow fast people. Doesnt work yet.

--- a/src/config.yml
+++ b/src/config.yml
@@ -3,3 +3,9 @@ eclipseplugin:
     itemlimit: 50
     active: true
     timeout: 15000
+  roof:
+    speed: 15
+    lowtps: 16
+    lowspeed: 10
+    offtps: 10
+    killifabove: false
