Shields, Culling, and More
Added commands for the shield, dura, and chunk culling commands.
Added tolerance for roof travel.
Improved dura.
Fixed shield damage.

--- a/src/config.yml
+++ b/src/config.yml
@@ -10,4 +10,8 @@ eclipseplugin:
     offtps: 10
     killifabove: false
   culling:
-    time:-1
+    time: -1
+  dura:
+    active: true
+  shield:
+    active: true
