Help command improved
Can be less invasive, but also will override the default help more effectively if needed.

--- a/src/config.yml
+++ b/src/config.yml
@@ -53,6 +53,7 @@ eclipseplugin:
       - "server-icon.png"
   customhelp:
     active: true
+    override: false
     pages:
       1:
           |-
