Item frame dupe
Item frame dupe added.
Changed how dupe command works to reflect, both dupes share an item limit.
Donkey dupe was simplified a bit.
Donkey dupe yield is now customizable.
This was not tested.

--- a/src/config.yml
+++ b/src/config.yml
@@ -1,8 +1,13 @@
 eclipseplugin:
   dupe:
     itemlimit: 50
-    active: true
-    timeout: 15000
+    donkey:
+      active: true
+      timeout: 15000
+      yield: 2
+    itemframe:
+      active: true
+      rate: 0.05
   roof:
     speed: 15
     lowtps: 16
